# genflow

./: .env.example  .gitignore  .gitmodules  .gitmodules-config  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  db_fix_report.md  docker-compose.yml  fastapi_entry.py  manage.py  platform_routes.json  pyproject.toml  pyproject_new.toml  pytest.ini  requirements.txt  run.py  start.sh  test_controllers.py  webpack.config.js  wsgi.py
.trae/rules/: project_rules.md
app/: __init__.py  __init__.py.2  config.py  dify_client.py  extensions.py
app/admin/: __init__.py  admin.py
app/api/: admin.py  ai_api.py  articles.py  config.py  platforms.py  user_management.py
app/models/: article.py  platform.py
app/services/: article_service.py  auth_service.py  platform_service.py
app/tasks/: __init__.py
app/templates/: 404.html  500.html  base.html  index.html
app/utils/: errors.py  logger.py  process_manager.py  validators.py
app/views/: __init__.py
backend/: .env.example  .gitignore  Dockerfile  README.md  logconfig.yml  pyproject.toml  requirements.txt
backend/api/: main.py
backend/api/routes/: chat.py
backend/crewai/: agents.py
backend/src/: __init__.py  main.py  worker.py
backend/src/api/: deps.py  routes.py  websocket.py
backend/src/api/ai_assistant/: deps.py  models.py  routes.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/endpoints/: __init__.py  articles.py  auth.py  crews.py  users.py
backend/src/core/: config.py  exceptions.py  security.py  websocket.py
backend/src/db/: init_db.py  session.py
backend/src/middleware/: __init__.py  request_headers.py
backend/src/migrations/: env.py
backend/src/models/: __init__.py  article.py  base.py  user.py
backend/src/repositories/: sqlalchemy.py
backend/src/schemas/: article.py  auth.py  common.py  crews.py
backend/src/services/: __init__.py  ai_service.py  article_service.py  auth_service.py  user_service.py
backend/src/services/ai_writing/: manager.py
backend/src/utils/: redis.py
backend/tests/: test_routes.py
config/: __init__.py  development.py  production.py  testing.py
core/: __init__.py  api.py  config.py  main.py  readme.md
core/agents/: adapter_development_guide.md  content_crew.py  readme.md  research.md
core/constants/: __init__.py  content_types.py  style_types.py
core/control_ai/: __init__.py  api.py  clients.py  compare.md  control_ai.py  intent_recognizer.py  nature_control.md  readme.md  response_generator.py  task_planner.py
core/controllers/: README.md  base_adapter.py  content_controller.py  controller_adapter.py  controller_benchmark.py  crewai_flow_controller.py  crewai_hierarchical_controller.py  crewai_manager_controller.py  crewai_sequential_controller.py  crewai_state_flow_guide.md  run_benchmark.py  run_custom_controller.py  team_adapter.py
core/db/: __init__.py  article.py  article_style.py  content_type.py  initialize.py  migrate_configs.py  model_manager.py  models.py  platform.py  readme.md  repository.py  session.py  topic.py  utils.py
core/docs/: refactoring_plan.md
core/models/: __init__.py  about_me.md  article.py  article_outline.py  article_service.py  article_style.py  basic_article.py  basic_outline.py  category.py  config_manager.py  config_service.py  content_factory.py  content_manager.py  content_manager_factory.py  content_type.py  data_storage.md  db_adapter.py  develop_guide.md  enums.py  feedback.py  manager_registry.py  operation_manager.py  platform.py  progress.py  readme.md  research.py  simple_content_manager.py  terminology.md  topic.py  util.py
core/services/: keywords.py
core/tools/: __init__.py  base.py  research_tools.py
data/: platform_config.json
docs/: GenFlow_项目规划.md  develop_guide.md  quickstart.md  team_adapter_architecture.md  tmux_guide.md  技术方案_Dify.md  技术方案_前端.md  技术方案_后端.md  流量变现策略报告.md
docs/ai_assistant/: content_flow_construct.md  content_flow_design.md  content_flow_develop_guide.md  content_flow_integration_guide.md  content_flow_integration_plan.md
docs/api/: ai-writing-assistant-api.md  ai-writing_tool_api.md  api-standards.md  genflow_article_api.md  genflow_auth_api.md
docs/backend/: assistant_fastapi_instruct.md  assistant_fastapi_plan.md  content_flow_design.md  genflow_backend_roadmap.md  技术方案_Dify.md  技术方案_后端.md  自动写文章_v2.md
docs/cursor/: cursorrules.md  cursorrules.short.md
docs/frontend/: README.md  ai-writing-assistant-api.md  ai-writing-assistant-design.md  ai-writing_tool_api.md  ai-writing_tool_plan.md  api-standards.md  genflow_article_api.md  genflow_auth_api.md  genflow_types.md  state-management.md
examples/: Claude_Journalist.ipynb  ai_journalist_openai.py  content_collection_example.py  langmanus_example.py  run_crawler.py  run_redis_check.py  run_research_crew_test.py  run_topic_tools_test.py  test_platform_category.py  test_research.py  test_style_crew_integration.py  test_style_types.py  test_trending_topics.py  test_writing_client.py  test_writing_interface.py
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  editor.py  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  utils.py
scripts/: ai_journalist_openai.py  check-submodules.sh  db_manager.py  db_tools.py  debug_redis.py  dev-setup.sh  init_db.py  initialize_database.py  readme.md  reset_db.py  setup-backend.sh  setup-frontend.sh  start-backend-debug.sh  start-backend.sh  start-daily.sh  start-dev.sh  start-frontend-prod.sh  start-frontend.sh  start-manus.sh  start-md.sh  start-prod.sh  test-db-connection.sh  test-environment.sh  update-submodules.sh
src/: config.py  main.py
tests/: README.md  __init__.py  conftest.py  mock_tools.py  run_crewai_tools_test.py  test_api.py  test_article_service.py  test_content_manager.py  test_content_types.py  test_crewai_tools.py  test_db_adapter.py  test_db_core.py  test_models.py  test_research_crew.py  test_research_tools.py  test_review_tools.py  test_tools.py  test_topic_service.py  test_topic_tools.py  test_utils.py  test_utils_demo.py  test_writing_tools.py
(+479 files in other folders)
