[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genflow"
version = "0.1.0"
description = "AI-powered content generation and management system"
authors = [
    {name = "Chen Yi", email = "chenyi.info@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    # Core Dependencies
    "crewai>=0.11.0",
    "requests>=2.31.0",
    "firecrawl>=0.1.0", # 高性能网页爬虫
    "loguru>=0.7.2", # 日志工具
    "redis>=5.0.3", # Redis客户端
    "celery>=5.3.6", # 分布式任务队列
    "json-repair>=0.39.1", # JSON修复工具
    # Web Framework
    "fastapi>=0.110.0", # Web框架
    "uvicorn>=0.27.1", # ASGI服务器
    "pydantic>=2.6.3", # 数据验证
    "sqlalchemy>=2.0.28", # ORM框架
    "alembic>=1.13.1", # 数据库迁移工具
    "asyncpg>=0.29.0", # PostgreSQL异步驱动
    "python-dotenv>=1.0.1", # 环境变量管理
    "python-multipart>=0.0.9", # 文件上传
    "httpx>=0.27.0", # HTTP客户端
    "fastapi-cache2>=0.2.1", # FastAPI缓存扩展
    # Security
    "python-jose[cryptography]>=3.3.0", # JWT认证
    "passlib[bcrypt]>=1.7.4", # 密码哈希
    # Content Collection
    "newspaper3k>=0.2.8",
    "trafilatura>=1.6.3",
    "readability-lxml>=0.8.1", # 网页内容提取工具
    # NLP & Text Processing
    "jieba>=0.42.1",
    "nltk>=3.8.1",
    "summa>=1.2.0", # 文本摘要
    "yake>=0.4.8", # 关键词提取
    # Search Tools
    "duckduckgo-search>=4.4.3",
    "pytrends>=4.9.0", # 降级到稳定版本
    # AI & ML
    "openai>=1.12.0",
    # Development Tools
    "pytest>=8.0.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pre-commit>=4.2.0",
    "faker>=24.2.0",
    "locust>=2.24.0",
]

backend = [
    "aiofiles>=23.2.1",
]

all = [
    "pre-commit>=4.2.0",
]

[project.scripts]
genflow = "run:run"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
(
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
line_length = 100
include_trailing_comma = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

[tool.mypy]
python_version = "3.12"
exclude = ["migrations/"]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "fastapi_cache.*",
    "redis.*"
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", "migrations"]
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "I",   # isort
    "RUF", # ruff-specific rules
]
lint.ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.coverage.report]
fail_under = 20
exclude_also = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "\\.\\.\\.",
]

[tool.coverage.run]
omit = ['*tests/*']

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.0",
]
lint = [
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
]
